# reels

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
assets/Knotreels.v0.ui/: CURSOR_IMPLEMENTATION_PROMPT.md  pnpm-lock.yaml  reel-ui-design.md
assets/Knotreels.v0.ui/app/: layout.tsx  page.tsx
crates/reel-app/: Cargo.toml  build.rs
crates/reel-app/src/: asset_cache.rs  autosave.rs  effects.rs  footer.rs  help_markdown.rs  lib.rs  main.rs  media_extensions.rs  player.rs  prefs.rs  project_io.rs  recent.rs  session.rs  shell.rs  subtitle.rs  timecode.rs  timeline.rs  timeline_chips.rs  ui_bridge.rs
crates/reel-app/tests/: ui_floating_controls.rs  ui_visual_golden.rs
crates/reel-app/ui/: app.slint  help_window.slint  theme.slint
crates/reel-cli/: Cargo.toml
crates/reel-cli/src/: main.rs
crates/reel-core/: Cargo.toml
crates/reel-core/examples/: scan_file.rs
crates/reel-core/src/: error.rs  lib.rs  logging.rs  sidecar.rs
crates/reel-core/src/media/: decoder.rs  export.rs  frame.rs  metadata.rs  mod.rs  probe.rs  scan.rs  srt.rs  ttml.rs
crates/reel-core/src/project/: autosave.rs  mod.rs  orientation.rs  scale.rs  schema.rs
crates/reel-core/tests/: export_web_formats.rs  probe_fixtures.rs  project_roundtrip.rs  scan_fixtures.rs  sidecar_client.rs
crates/reel-core/tests/fixtures/: weird_audio.mkv
crates/reel-core/tests/snapshots/: project_roundtrip__project_matches_golden_snapshot.snap
docs/: AGENTS.md  CLI.md  CONTRIBUTING.md  DEVELOPERS.md  EXTERNAL_AI.md  FEATURES.md  HELP.md  KEYBOARD.md  MEDIA_FORMATS.md  README.md  RELEASING.md  SUPPORTED_FORMATS.md  architecture.md  develop_like_me.md  phase-status.md  phases-ui-test.md  phases-ui.md
packaging/macos/: Info.plist
scripts/: generate_fixtures.sh  install_plugin.sh  lint_phases.sh  setup_facefusion.sh
scripts/macos/: build_app_bundle.sh  build_deps.sh  bundle_deps_into_app.sh
sidecar/: README.md  facefusion_bridge.py  pyproject.toml
sidecar/tests/: test_bridge.py
