[workspace]
resolver = "2"
members  = [
    "crates/reel-core",
    "crates/reel-app",
    "crates/reel-cli",
]

[workspace.package]
edition      = "2021"
rust-version = "1.78"
license      = "MIT OR Apache-2.0"
version      = "0.1.0"
authors      = ["Reel contributors"]

[workspace.dependencies]
anyhow              = "1"
thiserror           = "1"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
chrono              = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs                = "5"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender    = "0.2"
ffmpeg-next         = { version = "7.1", default-features = false, features = ["codec", "format", "software-resampling", "software-scaling"] }
slint               = { version = "1.8", default-features = false, features = ["std", "backend-winit", "renderer-femtovg", "renderer-software", "compat-1-2"] }
slint-build         = "1.8"
cpal                = "0.15"
clap                = { version = "4", features = ["derive"] }
parking_lot         = "0.12"
crossbeam-channel   = "0.5"
uuid                = { version = "1", features = ["serde", "v4"] }
ringbuf             = "0.4"
rfd                 = "0.15"
image               = { version = "0.25", default-features = false, features = ["png"] }
tempfile            = "3"

# Dev
assert_matches      = "1.5"
insta               = { version = "1", features = ["json"] }
mockall             = "0.12"
pretty_assertions   = "1"
# Slint's testing backend does NOT follow semver — the version must match the slint
# crate exactly (see docs/phases-ui-test.md Phase 1). When bumping `slint` above,
# bump this pin in lockstep.
i-slint-backend-testing = "=1.16.0"

[profile.dev]
# ffmpeg decode is unusably slow at opt-level 0 on debug builds.
opt-level = 1

[profile.release]
lto           = "thin"
codegen-units = 1
