[project]
name            = "reel-sidecar"
version         = "0.1.0"
description     = "Python sidecar for Reel (FaceFusion bridge, future workers)"
requires-python = ">=3.11"
dependencies    = []

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
