[package]
name              = "reel-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description       = "Reel desktop app (Slint UI)"

[lib]
name = "reel_app"
path = "src/lib.rs"

[[bin]]
name = "reel"
path = "src/main.rs"

[dependencies]
reel-core                   = { path = "../reel-core" }
slint.workspace             = true
anyhow.workspace            = true
tracing.workspace           = true
parking_lot.workspace       = true
crossbeam-channel.workspace = true
ffmpeg-next.workspace       = true
cpal.workspace              = true
ringbuf.workspace           = true
rfd.workspace               = true
serde.workspace           = true
serde_json.workspace      = true
pulldown-cmark            = "0.13"
dirs.workspace            = true
uuid.workspace              = true
image.workspace             = true

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
tempfile.workspace = true
i-slint-backend-testing.workspace = true
# Integration tests (`tests/*.rs`) import `slint::` directly (visual golden harness).
slint.workspace = true
