[package]
name              = "reel-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description       = "Reel shared core: media probe, project model, tracing setup"

[dependencies]
anyhow.workspace             = true
thiserror.workspace          = true
serde.workspace              = true
serde_json.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
tracing-appender.workspace   = true
ffmpeg-next.workspace        = true
parking_lot.workspace        = true
crossbeam-channel.workspace  = true
uuid.workspace               = true

[dev-dependencies]
assert_matches.workspace    = true
tempfile.workspace          = true
insta.workspace             = true
mockall.workspace           = true
pretty_assertions.workspace = true
